# rodnmod-rewrite

./: .gitignore  LICENSE  README.md  main.html  main.js  main.py  package-lock.json  package.json  requirements.txt  updater.html
app/: app.html  main.html  style.css
app/assets/web/: style.css
app/scripts/: soundPlayer.js  uiScripts.js
assets/scripts/: dropdowns.js  secrets.js
assets/web/: owner.txt
data/config/: config.json
libs/: fishfinder.js
modules/: __init__.py
repository/: owner.txt
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/internet/: commands.rs
src/assets/: style.css
src/assets/scripts/: modlist.js  renderer.js  saveman.js
src/scripts/: script.js  uiScripts.js
